--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,7 @@ spring.datasource.username=${JDBC_USERNAME}
 spring.datasource.password=${JDBC_PASSWORD}
 
 # create or drop tables hver session
-spring.jpa.hibernate.ddl-auto=create
-
+spring.jpa.hibernate.ddl-auto=create-drop
 
 #Set this while developing application
 spring.jpa.show-sql=true
@@ -20,6 +19,9 @@ app.secret-key=${TOKEN_SECRET}
 app.token-expiration = 1800
 app.token-issuer=java.memgrp
 
-
-
 logging.level.org.springframework.web=DEBUG
+
+##Ensures that the tables are created with hibernate before the data sql script is read
+spring.jpa.defer-datasource-initialization=true
+##Ensures that the data sql script is read every time the application starts
+spring.sql.init.mode=always
