refactoring some stuff

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=${JDBC_USERNAME}
 spring.datasource.password=${JDBC_PASSWORD}
 
 # create or drop tables hver session
-spring.jpa.hibernate.ddl-auto=create
+# spring.jpa.hibernate.ddl-auto=create
 
 
 #Set this while developing application
