Fixed database. Stjal create.sql fra mikkel

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,28 @@
-#
+# --- DATABASE / JPA ---
 spring.datasource.url=${JDBC_DATABASE_URL}
 spring.datasource.username=${JDBC_USERNAME}
 spring.datasource.password=${JDBC_PASSWORD}
-
-# create or drop tables hver session
-# spring.jpa.hibernate.ddl-auto=create
-
-
-#Set this while developing application
+# Set this while developing application
 spring.jpa.show-sql=true
+# create or drop tables hver session
+spring.jpa.hibernate.ddl-auto=create-drop
+# Ensures that the tables are created with hibernate before the data sql script is read
+spring.jpa.defer-datasource-initialization=true
+# Ensures that the data sql script is read every time the application starts
+spring.sql.init.mode=always
 
+
+# --- SERVER ---
 server.error.include-stacktrace=never
 
-# IMPORTANT !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-# Remove default value below before deployment
-app.secret-key=${TOKEN_SECRET}
 
-#60*30 =1800  --> Token is valid for 30 minutes
+# --- LOGGING ---
+logging.level.org.springframework.web=DEBUG
+
+
+# --- SECURITY ---
+# Token secret is used to sign the token
+app.secret-key=${TOKEN_SECRET}
+# Token is valid for 30 minutes --> 60*30 = 1800 seconds
 app.token-expiration = 1800
 app.token-issuer=java.memgrp
-
-
-
-logging.level.org.springframework.web=DEBUG
