--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,10 @@ app.secret-key=${TOKEN_SECRET}
 # Token is valid for 30 minutes --> 60*30 = 1800 seconds
 app.token-expiration = 1800
 app.token-issuer=java.memgrp
+
+# These value are NOT meant for a real-life production environment
+# They should help to eliminate some of the problems you might encounter when using Azure free F1 plan 
+# with a MySQL database running in a Docker container
+spring.datasource.hikari.max-lifetime=300000 
+spring.datasource.hikari.idle-timeout=30000
+
