--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,23 +9,9 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 # Set this while developing application
 spring.jpa.show-sql=true
-# create or drop tables hver session
-spring.jpa.hibernate.ddl-auto=create-drop
-# Ensures that the tables are created with hibernate before the data sql script is read
-spring.jpa.defer-datasource-initialization=true
-# Ensures that the data sql script is read every time the application starts
-spring.sql.init.mode=always
-
 
 # --- SERVER ---
 server.error.include-stacktrace=never
-app.secret-key=${TOKEN_SECRET}
-
-#60*30 =1800  --> Token is valid for 30 minutes
-app.token-expiration = 1800
-app.token-issuer=java.memgrp
-
-logging.level.org.springframework.web=DEBUG
 
 ##Ensures that the tables are created with hibernate before the data sql script is read
 spring.jpa.defer-datasource-initialization=true
@@ -41,3 +27,9 @@ app.secret-key=${TOKEN_SECRET}
 # Token is valid for 30 minutes --> 60*30 = 1800 seconds
 app.token-expiration = 1800
 app.token-issuer=java.memgrp
+
+# These value are NOT meant for a real-life production environment
+# They should help to eliminate some of the problems you might encounter when using Azure free F1 plan 
+# with a MySQL database running in a Docker container
+spring.datasource.hikari.max-lifetime=300000 
+spring.datasource.hikari.idle-timeout=30000
