--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,6 @@ app.token-issuer=java.memgrp
 # with a MySQL database running in a Docker container
 spring.datasource.hikari.max-lifetime=300000 
 spring.datasource.hikari.idle-timeout=30000
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
