--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,20 +2,11 @@
 spring.datasource.url=${JDBC_DATABASE_URL}
 spring.datasource.username=${JDBC_USERNAME}
 spring.datasource.password=${JDBC_PASSWORD}
-<<<<<<< HEAD
-
-# create or drop tables hver session
-spring.jpa.hibernate.ddl-auto=create-drop
 
 # Set this while developing application
 spring.jpa.show-sql=true
 # create or drop tables hver session
 spring.jpa.hibernate.ddl-auto=create-drop
-# Ensures that the tables are created with hibernate before the data sql script is read
-spring.jpa.defer-datasource-initialization=true
-# Ensures that the data sql script is read every time the application starts
-spring.sql.init.mode=always
-
 
 # --- SERVER ---
 server.error.include-stacktrace=never
@@ -32,12 +23,4 @@ spring.jpa.defer-datasource-initialization=true
 ##Ensures that the data sql script is read every time the application starts
 spring.sql.init.mode=always
 
-# --- LOGGING ---
-logging.level.org.springframework.web=DEBUG
-
-# --- SECURITY ---
-# Token secret is used to sign the token
-app.secret-key=${TOKEN_SECRET}
-# Token is valid for 30 minutes --> 60*30 = 1800 seconds
-app.token-expiration = 1800
-app.token-issuer=java.memgrp
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
